[FIX] Header Z-index

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -64,7 +64,7 @@ h6 {
   background-color: #00264D;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   max-height: 75px;
   overflow: hidden;
@@ -315,6 +315,7 @@ h6 {
   box-shadow: 0px 3px 2px 0px #0000004d;
   transform: rotateZ(90deg);
   font-weight: bold;
+  position: sticky;
   transition: all 0.5s ease-out 0s;
 }
 .mobile-nav-button:hover {
@@ -383,7 +384,7 @@ h6 {
   background-color: #192A3B;
   width: 100%;
   position: sticky;
-  z-index: 2;
+  z-index: 1;
   top: 75px;
   align-items: center;
   font-weight: bold;
@@ -427,17 +428,6 @@ h6 {
   border: 5px solid rgba(194, 194, 194, 0.2) !important;
   background: radial-gradient(ellipse at center, rgba(50, 130, 183, 0.45) 50%, #00000029 100%) !important;
   padding: 0 !important;
-}
-/* ===== P O S T ===== */
-.post-container {
-  padding: 5px !important;
-}
-.post-container article {
-  max-height: 80vh;
-  overflow-y: scroll;
-  padding: 5px 10px;
-  background: #fdfdfd !important;
-  border-radius: 3px;
 }
 .socialmedia-container {
   padding: 20px;
@@ -793,5 +783,15 @@ h6 {
 .text-container {
   text-align: justify;
   padding: 10px 0;
+}
+.single-container {
+  padding: 5px !important;
+}
+.single-container article {
+  max-height: 80vh;
+  overflow-y: scroll;
+  padding: 5px 10px;
+  background: #fdfdfd !important;
+  border-radius: 3px;
 }
 
