--- a/resources/less/common/class-components.less
+++ b/resources/less/common/class-components.less
@@ -133,3 +133,15 @@
     text-align: justify;
     padding: 10px 0;
 }
+
+.single-container{
+    padding: 5px !important;
+
+    article{
+        max-height: 80vh;
+        overflow-y: scroll;
+        padding: 5px 10px;
+        background: @light_neutral !important;
+        border-radius: 3px;
+    }
+}
