--- a/resources/less/components/blog.less
+++ b/resources/less/components/blog.less
@@ -3,16 +3,3 @@
     background: radial-gradient(ellipse at center, rgba(50, 130, 183, 0.45) 50%, #00000029 100%) !important;
     padding: 0 !important;
 }
-
-/* ===== P O S T ===== */
-.post-container{
-    padding: 5px !important;
-
-    article{
-        max-height: 80vh;
-        overflow-y: scroll;
-        padding: 5px 10px;
-        background: @light_neutral !important;
-        border-radius: 3px;
-    }
-}
