--- a/resources/less/components/breadcrumbs.less
+++ b/resources/less/components/breadcrumbs.less
@@ -4,7 +4,7 @@
     .panel-secondary;
     width: 100%;
     position: sticky;
-    z-index: 2;
+    z-index: 1;
     top: 75px;
     align-items: center;
     font-weight: bold;
