--- a/resources/less/components/navigation.less
+++ b/resources/less/components/navigation.less
@@ -7,6 +7,7 @@
     .box-container-mixin(10%, 0px, @primary);
     transform: rotateZ(90deg);
     font-weight: bold;
+    position: sticky;
     .transition(all, .5s, ease-out);
 
     &:hover{
