--- a/resources/less/layouts/user.less
+++ b/resources/less/layouts/user.less
@@ -7,7 +7,7 @@
     .panel-primary;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     max-height: 75px;
     overflow: hidden;
